added register and login
