# auth_service/api/v1/blueprint.py
@@ -1,5 +1,6 @@
 from flask import Blueprint
 from .roles import create_role, delete_role, change_role, roles_list
+from .users import register_new_user, login_user
 
 blueprint = Blueprint("api/v1", __name__)
 
@@ -22,4 +23,14 @@ blueprint.add_url_rule(
     '/roles_list',
     methods=["GET"],
     view_func=roles_list,
+)
+blueprint.add_url_rule(
+    '/register',
+    methods=["POST"],
+    view_func=register_new_user,
+)
+blueprint.add_url_rule(
+    '/login',
+    methods=["POST"],
+    view_func=login_user,
 )
