# auth_service/api/v1/roles.py
@@ -1,7 +1,7 @@
 from http import HTTPStatus
 
-from database.service import create_role, delete_role, change_role
-from database.models import Roles
+from database.service import create_role_db, delete_role_db, change_role_db
+from database.models import Roles, Users
 from roles.administrator import admin_or_manager_required
 from flask import jsonify, request, make_response
 
@@ -11,8 +11,10 @@ def create_role():
     role = request.values.get('role', None)
     if not role:
         return make_response('New role is empty', HTTPStatus.BAD_REQUEST)
-
-    new_role = create_role(role)
+    db_role = Roles.query.filter_by(name=role).first()
+    if db_role:
+        return make_response('Role is already exist', HTTPStatus.BAD_REQUEST)
+    create_role_db(role)
     return jsonify(msg=f'Role {role} was successfully created')
 
 
@@ -24,7 +26,7 @@ def delete_role():
     db_role = Roles.query.filter_by(name=role).first()
     if not db_role:
         return make_response('Role does not exist', HTTPStatus.NOT_FOUND)
-    delete_role(db_role)
+    delete_role_db(db_role)
     return jsonify(msg=f'Role {role} was successfully deleted')
 
 
@@ -34,8 +36,10 @@ def change_role():
     new_role = request.values.get("new_name", None)
     if not role or not new_role:
         return make_response('Role or new name is empty', HTTPStatus.BAD_REQUEST)
-
-    change_role(role, new_role)
+    db_role = Roles.query.filter_by(name=role).first()
+    if not db_role:
+        return make_response('Role does not exist', HTTPStatus.NOT_FOUND)
+    change_role_db(role, new_role)
     return jsonify(msg=f'Role {role} was successfully changed')
 
 
